--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Coba socket.io with esp8266",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [
     "IoT"
